@@ -1,4 +1,7 @@
-# this file is generated from the subversion log. do not edit!
+2006-07-03  Gautier Portet <kassoulet gmail com>
+
+	* Added a command line version.
+
 2005-06-17  Gautier Portet <kassoulet gmail com>
 
 2005-06-17  Gautier Portet <kassoulet gmail com>
